infrastructure/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outfitstyle-ingress
  namespace: outfitstyle
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: app.outfitstyle.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
  - host: outfitstyle.play2go.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
  - host: landing.outfitstyle.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing
            port:
              number: 80
  tls:
  - hosts:
    - app.outfitstyle.ru
    - outfitstyle.play2go.cloud
    - landing.outfitstyle.ru
    secretName: outfitstyle-tls
